--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ fastapi==0.115.6
 uvicorn[standard]==0.30.6
 
 httpx==0.27.2
-selectolax==0.3.17
+beautifulsoup4==4.12.3
+lxml==5.3.0
 
 redis==5.0.8
 psycopg[binary]==3.2.3
