--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,1 @@
-fastapi==0.115.6
-uvicorn[standard]==0.30.6
-
-httpx==0.27.2
-beautifulsoup4==4.12.3
-lxml==5.3.0
-
-redis==5.0.8
-psycopg[binary]==3.2.3
-
-pydantic==2.10.3
-pydantic-settings==2.6.1
+python-telegram-bot==20.7
